<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/spash_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_h1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>


    <TextView
        android:id="@+id/spash_h2"
        android:layout_below="@id/spash_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_h2"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/spash_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_h3"
        android:textColor="#ACA7A7"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal"
        android:textSize="15sp"/>



</RelativeLayout>