<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/persean_blue"
        android:gravity="center">

        <TextView
            android:id="@+id/cat_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/category"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_qcount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/title"
        android:background="@color/blue_green"
        android:padding="10dp">

        <TextView
            android:id="@+id/qcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/20"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:40"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/layout_qcount"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:layout_centerHorizontal="true"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qustion"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>



    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/card_view_layout"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="10dp">

        <Button
            android:id="@+id/optin_a_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/option1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="5dp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/optin_b_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/option2"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="5dp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/optin_c_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/option3"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="5dp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/optin_d_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/option4"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="5dp"
            android:textStyle="bold"
            android:textAlignment="center"/>


    </LinearLayout>


</RelativeLayout>